--- a/src/BooksService/appsettings.json
+++ b/src/BooksService/appsettings.json
@@ -10,8 +10,8 @@
     ]
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres;Port=5432;Database=BooksDatabase;Username=postgres;Password=root;",
-    "RedisConnection": "redis:6379"
+    "DefaultConnection": "Host=postgres;Port=5432;Database=BooksDatabase;Username=user;Password=root;",
+    //"RedisConnection": "redis:6379"
   },
   "Logging": {
     "LogLevel": {
