--- a/src/BooksService/Properties/launchSettings.json
+++ b/src/BooksService/Properties/launchSettings.json
@@ -16,6 +16,21 @@
       },
       "publishAllPorts": true,
       "useSSL": true
+    },
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    }
+  },
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:55696/",
+      "sslPort": 44366
     }
   }
 }
