--- a/.github/workflows/test-dotnet.yml
+++ b/.github/workflows/test-dotnet.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
-      run: dotnet restore src/BookService
+      run: dotnet restore src\BookService
     - name: Build
       run: dotnet build --no-restore
     - name: Test
