--- a/BookHub.docker-compose/docker-compose.yml
+++ b/BookHub.docker-compose/docker-compose.yml
@@ -1,10 +1,10 @@
 services:
-  booksservice:
-    container_name: booksservice_container
-    image: ${DOCKER_REGISTRY-}booksservice
+  bookhub-api:
+    container_name: bookhub_api_container
+    image: ${DOCKER_REGISTRY-}bookhub
     build:
-      context: src
-      dockerfile: ../docker/Dockerfile
+      context: ../
+      dockerfile: docker/Dockerfile
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=8080
