--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,24 +4,27 @@ WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
-
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
-WORKDIR /src
-COPY ["BooksService/BooksService.csproj", "BooksService/"]
-COPY ["Storage/Storage.csproj", "Storage/"]
-RUN dotnet restore "./BooksService/BooksService.csproj"
-COPY . .
-WORKDIR "/src/BooksService"
+ARG DOCKER_DOTNET_PROJECT_PREFIX="BookHub"
+ARG DOCKER_DOTNET_MAIN_PROJECT="${DOCKER_DOTNET_PROJECT_PREFIX}.API"
 
-RUN dotnet dev-certs https
-RUN dotnet build "./BooksService.csproj" -c $BUILD_CONFIGURATION -o /app/build
+
+WORKDIR /src
+COPY ["${DOCKER_DOTNET_MAIN_PROJECT}/${DOCKER_DOTNET_MAIN_PROJECT}.csproj", "${DOCKER_DOTNET_MAIN_PROJECT}/"]
+COPY ["${DOCKER_DOTNET_PROJECT_PREFIX}.Storage/${DOCKER_DOTNET_PROJECT_PREFIX}.Storage.csproj", "${DOCKER_DOTNET_PROJECT_PREFIX}.Storage/"]
+RUN dotnet restore "./${DOCKER_DOTNET_MAIN_PROJECT}/${DOCKER_DOTNET_MAIN_PROJECT}.csproj"
+COPY . .
+WORKDIR "/src/${DOCKER_DOTNET_MAIN_PROJECT}"
+
+# RUN dotnet dev-certs https
+RUN dotnet build "./${DOCKER_DOTNET_MAIN_PROJECT}.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./BooksService.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./${DOCKER_DOTNET_MAIN_PROJECT}.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "BooksService.dll"]
+ENTRYPOINT ["dotnet", "${DOCKER_DOTNET_MAIN_PROJECT}.dll"]
