--- a/BookHub.Models.Tests/BookHub.Models.Tests.csproj
+++ b/BookHub.Models.Tests/BookHub.Models.Tests.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Using Include="Xunit" />
+    <ProjectReference Include="..\BookHub.Models\BookHub.Models.csproj" />
   </ItemGroup>
 
 </Project>
