#21 add validator for book text limit

--- a/BookHub.API/appsettings.json
+++ b/BookHub.API/appsettings.json
@@ -9,8 +9,11 @@
       "parahinkv@gmail.com"
     ]
   },
+  "BookTextConfiguration": {
+    "BookSymbolsMaxLimit": 10000000
+  },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres;Port=5432;Database=BooksDatabase;Username=user;Password=root;",
+    "DefaultConnection": "Host=postgres;Port=5432;Database=BooksDatabase;Username=user;Password=root;"
     //"RedisConnection": "redis:6379"
   },
   "Logging": {
