--- a/BookHub.API/BookHub.API.csproj
+++ b/BookHub.API/BookHub.API.csproj
@@ -34,6 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BookHub.Models\BookHub.Models.csproj" />
     <ProjectReference Include="..\BookHub.Storage\BookHub.Storage.csproj" />
   </ItemGroup>
 
