--- a/BookHub.API/appsettings.json
+++ b/BookHub.API/appsettings.json
@@ -13,8 +13,7 @@
     "BookSymbolsMaxLimit": 10000000
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres;Port=5432;Database=BooksDatabase;Username=user;Password=root;"
-    //"RedisConnection": "redis:6379"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=books_db;Username=postgres;Password=root;"
   },
   "Logging": {
     "LogLevel": {
