--- a/BookHub.API/appsettings.json
+++ b/BookHub.API/appsettings.json
@@ -9,11 +9,8 @@
       "parahinkv@gmail.com"
     ]
   },
-  "BookTextConfiguration": {
-    "BookSymbolsMaxLimit": 10000000
-  },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=books_db;Username=postgres;Password=root;"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=books_hub;Username=postgres;Password=root;"
   },
   "Logging": {
     "LogLevel": {
