#22 add contract models for key words serialization

--- a/BookHub.Storage/BookHub.Storage.csproj
+++ b/BookHub.Storage/BookHub.Storage.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BookHub.Contracts\BookHub.Contracts.csproj" />
     <ProjectReference Include="..\BookHub.Models\BookHub.Models.csproj" />
   </ItemGroup>
 
