--- a/Abstractions/Abstractions.csproj
+++ b/Abstractions/Abstractions.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Abstractions\Abstractions.csproj" />
+    <Folder Include="Logic\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BookHub.Models\BookHub.Models.csproj" />
   </ItemGroup>
 
 </Project>
