--- a/BookHub.API/appsettings.json
+++ b/BookHub.API/appsettings.json
@@ -4,6 +4,9 @@
       "666431505457-ca1mgtqrli0nqv9r87ek40elo4bqe0lk.apps.googleusercontent.com"
     ]
   },
+  "TestConfig": {
+    "Content": "Default config content"
+  },
   "AdminAuthorizationConfiguration": {
     "Admins": [
       "parahinkv@gmail.com"
