--- a/BookHub.API/BookHub.API.csproj
+++ b/BookHub.API/BookHub.API.csproj
@@ -31,6 +31,7 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
     <PackageReference Include="StackExchange.Redis" Version="2.8.16" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.9.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.9.0" />
   </ItemGroup>
 
   <ItemGroup>
