--- a/BookHub.Logic/BookHub.Logic.csproj
+++ b/BookHub.Logic/BookHub.Logic.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BookHub.Abstractions\BookHub.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
