--- a/BookHub.Abstractions/BookHub.Abstractions.csproj
+++ b/BookHub.Abstractions/BookHub.Abstractions.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BookHub.Contracts\BookHub.Contracts.csproj" />
     <ProjectReference Include="..\BookHub.Models\BookHub.Models.csproj" />
   </ItemGroup>
 
