--- a/.editorconfig
+++ b/.editorconfig
@@ -136,7 +136,7 @@ dotnet_naming_rule.async_methods_should_be_ends_with_async.style = ends_with_asy
 
 dotnet_naming_rule.private_static_fields_should_be_begins_with_s_.severity = error
 dotnet_naming_rule.private_static_fields_should_be_begins_with_s_.symbols = private_static_fields
-dotnet_naming_rule.private_static_fields_should_be_begins_with_s_.style = begins_with_s_
+dotnet_naming_rule.private_static_fields_should_be_begins_with_s_.style = begins_with__
 
 dotnet_naming_rule.constant_fields_should_be_upper_case.severity = error
 dotnet_naming_rule.constant_fields_should_be_upper_case.symbols = constants
