--- a/BookHub.Storage/BookHub.Storage.csproj
+++ b/BookHub.Storage/BookHub.Storage.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Abstractions\Abstractions.csproj" />
+    <ProjectReference Include="..\BookHub.Abstractions\BookHub.Abstractions.csproj" />
     <ProjectReference Include="..\BookHub.Contracts\BookHub.Contracts.csproj" />
     <ProjectReference Include="..\BookHub.Models\BookHub.Models.csproj" />
   </ItemGroup>
