another test action change

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -20,6 +20,7 @@ jobs:
       id-token: write
     uses: book-hub-umsp/bh-infrastructure/.github/workflows/docker-publish.yml@master
     secrets: inherit
+    
   deploy:
     needs: [docker-build]
     runs-on: ubuntu-latest
@@ -27,4 +28,4 @@ jobs:
       PR_NUMBER: ${{ needs.docker-build.outputs.version-value }}
     steps:
     - name: Echo tag
-      run: echo "version=${{ env.PR_NUMBER }}"
+      run: echo '${{ toJSON(needs.docker-build.outputs) }}'
