--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -24,8 +24,13 @@ jobs:
   deploy:
     needs: [docker-build]
     runs-on: ubuntu-latest
-    env:
-      PR_NUMBER: ${{ needs.docker-build.outputs.version-value }}
+    environment: production
     steps:
-    - name: Echo tag
-      run: echo '${{  github.ref_name }}'
+    - name: Extract tag
+      id: get-tag
+      run: |
+        tag=$(echo ${{  github.ref_name }} | cut -dv -f2)
+        echo "::set-output name=tag::$tag"
+    - name: Job reload
+      run: |
+        echo ${{ vars.APP_PATH }}${{ steps.get-tag.outputs.tag }}
