--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -32,5 +32,11 @@ jobs:
         tag=$(echo ${{  github.ref_name }} | cut -dv -f2)
         echo "::set-output name=tag::$tag"
     - name: Job reload
-      run: |
-        echo ${{ vars.APP_PATH }}${{ steps.get-tag.outputs.tag }}
+      uses: appleboy/ssh-action@v1.1.0
+      with:
+        host: ${{ vars.ENV_SSH_HOST }}
+        username: ${{ secrets.ENV_SSH_USER }}
+        password: ${{ secrets.ENV_SSH_PASSWORD }}
+        script: |
+          cd ${{ vars.ENV_APP_PATH }}
+          nomad jobs -var-file ${{ vars.ENV_APP_PATH }} -var main-api-version="${{ steps.get-tag.outputs.tag }}" ${{ vars.ENV_JOB_FILE_PATH }}
