--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -38,5 +38,5 @@ jobs:
         username: ${{ secrets.ENV_SSH_USER }}
         password: ${{ secrets.ENV_SSH_PASSWORD }}
         script: |
-          cd ${{ vars.ENV_APP_PATH }}
+          cd ${{ vars.ENV_APP_PATH }} &&
           nomad job run -var-file ${{ vars.ENV_APP_PATH }} -var main-api-version="${{ steps.get-tag.outputs.tag }}" ${{ vars.ENV_JOB_FILE_PATH }}
