set way of pass nomad token

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -39,4 +39,4 @@ jobs:
         password: ${{ secrets.ENV_SSH_PASSWORD }}
         script: |
           cd ${{ vars.ENV_APP_PATH }}
-          nomad job run -token ${{ secrets.ENV_NOMAD_TOKEN }} -var-file ${{ vars.ENV_SECRET_FILE_PATH }} -var main-api-version="${{ steps.get-tag.outputs.tag }}" ${{ vars.ENV_JOB_FILE_PATH }}
+          nomad job run -token $(cat ${{ vars.ENV_NOMAD_TOKEN_FILE_PATH }}) -var-file ${{ vars.ENV_SECRET_FILE_PATH }} -var main-api-version="${{ steps.get-tag.outputs.tag }}" ${{ vars.ENV_JOB_FILE_PATH }}
