#65 add auth provider config

--- a/BookHub.API/appsettings.json
+++ b/BookHub.API/appsettings.json
@@ -1,8 +1,13 @@
 {
-  "GoogleJsonWebTokenConfiguration": {
-    "Audience": [
-      "666431505457-ca1mgtqrli0nqv9r87ek40elo4bqe0lk.apps.googleusercontent.com"
-    ]
+  "AuthJWTConfiguration": {
+    "Google": {
+      "Issuer": "google_issuer",
+      "Audience": "google_audience"
+    },
+    "Yandex": {
+      "Issuer": "yandex_issuer",
+      "Audience": "yandex_audience"
+    }
   },
   "TestConfig": {
     "Content": "Default config content"
@@ -13,7 +18,7 @@
     ]
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=books_hub;Username=postgres;Password=root;"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=books_hub;Username=postgres;Password=admin;"
   },
   "Logging": {
     "LogLevel": {
