--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -1,12 +1,12 @@
-name: Team mention
+# name: Team mention
 
-on:
-    issues:
-      types:
-        - labeled
+# on:
+#     issues:
+#       types:
+#         - labeled
 
-jobs:
-  mention-team:
-    permissions:
-      issues: write
-    uses: book-hub-umsp/bh-infrastructure/.github/workflows/issue-comment.yml@master
+# jobs:
+#   mention-team:
+#     permissions:
+#       issues: write
+#     uses: book-hub-umsp/bh-infrastructure/.github/workflows/issue-comment.yml@master
