--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -11,7 +11,10 @@ on:
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
 
-
+env:
+  INFRO_REPO: book-hub-umsp/bh-infrastructure
+  TARGET_BRANCH: master
+  
 jobs:
   docker-build:
     permissions:
@@ -31,12 +34,33 @@ jobs:
       run: |
         tag=$(echo ${{  github.ref_name }} | cut -dv -f2)
         echo "::set-output name=tag::$tag"
-    - name: Job reload
-      uses: appleboy/ssh-action@v1.1.0
+    - name: Checkout Infro repo
+      uses: actions/checkout@v4
       with:
-        host: ${{ vars.ENV_SSH_HOST }}
-        username: ${{ secrets.ENV_SSH_USER }}
-        password: ${{ secrets.ENV_SSH_PASSWORD }}
-        script: |
-          cd ${{ vars.ENV_APP_PATH }}
-          nomad job run -token $(cat ${{ vars.ENV_NOMAD_TOKEN_FILE_PATH }}) -var-file ${{ vars.ENV_SECRET_FILE_PATH }} -var main-api-version="${{ steps.get-tag.outputs.tag }}" ${{ vars.ENV_JOB_FILE_PATH }}
+        repository: '${{ env.INFRO_REPO }}'
+        ref: '${{ env.TARGET_BRANCH }}'
+        token: '${{ secrets.WORKFLOW_TOKEN }}'
+    - name: Setup `nomad`
+      uses: hashicorp/setup-nomad@main
+      id: setup
+      with:
+        version: ${{ vars.ENV_NOMAD_VERSION }}
+    - name: Plan job
+      env:
+        NOMAD_ADDR: ${{ vars.ENV_NOMAD_ADDR }}
+      run: |
+        nomad job plan \
+          -token ${{ secrets.ENV_NOMAD_TOKEN }} \
+          -var ROOT_PASS ${{ secrets.ENV_VAR_ROOT_PASS }} \
+          -var main-api-version ${{ steps.get-tag.outputs.tag }} \
+          ${{ vars.ENV_JOB_FILE_PATH }}
+    - name: Run job
+      env:
+        NOMAD_ADDR: ${{ vars.ENV_NOMAD_ADDR }}
+      run: |
+        nomad job run \
+          -token ${{ secrets.ENV_NOMAD_TOKEN }} \
+          -var ROOT_PASS ${{ secrets.ENV_VAR_ROOT_PASS }} \
+          -var main-api-version ${{ steps.get-tag.outputs.tag }} \ 
+          ${{ vars.ENV_JOB_FILE_PATH }}
+      
