--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -49,11 +49,10 @@ jobs:
       env:
         NOMAD_ADDR: ${{ vars.ENV_NOMAD_ADDR }}
       run: |
-        nomad job plan \
+        nomad job plan ${{ vars.ENV_JOB_PATH }} \
           -token ${{ secrets.ENV_NOMAD_TOKEN }} \
           -var ROOT_PASS ${{ secrets.ENV_VAR_ROOT_PASS }} \
           -var main-api-version ${{ steps.get-tag.outputs.tag }} \
-          ${{ vars.ENV_JOB_PATH }}
     - name: Run job
       env:
         NOMAD_ADDR: ${{ vars.ENV_NOMAD_ADDR }}
