--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -41,13 +41,21 @@ jobs:
       with:
         version: ${{ vars.ENV_NOMAD_VERSION }}
     - name: Plan job
+      continue-on-error: true # becase nomad job plan can return 1 as exit code on allocation creation
       env:
         NOMAD_ADDR: ${{ vars.ENV_NOMAD_ADDR }}
       run: |
-        nomad job plan -token ${{ secrets.ENV_NOMAD_TOKEN }} -var ROOT_PASS ${{ secrets.ENV_VAR_ROOT_PASS }} -var main-api-version ${{ steps.get-tag.outputs.tag }} ${{ vars.ENV_JOB_PATH }}
+        nomad job plan \
+        -token ${{ secrets.ENV_NOMAD_TOKEN }} \
+        -var "ROOT_PASS=${{ secrets.ENV_VAR_ROOT_PASS }}" \ 
+        -var "main-api-version=${{ steps.get-tag.outputs.tag }}" \ 
+        ${{ vars.ENV_JOB_PATH }}
     - name: Run job
       env:
         NOMAD_ADDR: ${{ vars.ENV_NOMAD_ADDR }}
       run: |
-        nomad job run -token ${{ secrets.ENV_NOMAD_TOKEN }} -var ROOT_PASS ${{ secrets.ENV_VAR_ROOT_PASS }} -var main-api-version ${{ steps.get-tag.outputs.tag }} ${{ vars.ENV_JOB_PATH }}
-      
+        nomad job run \
+          -token ${{ secrets.ENV_NOMAD_TOKEN }} \
+          -var "ROOT_PASS=${{ secrets.ENV_VAR_ROOT_PASS }}" \ 
+          -var "main-api-version=${{ steps.get-tag.outputs.tag }}" \ 
+          ${{ vars.ENV_JOB_PATH }}
