--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -41,6 +41,10 @@ jobs:
       with:
         version: ${{ vars.ENV_NOMAD_VERSION }}
     - run: ls -la
+    - run: |
+        cd nomad/jobs
+        ls -la
+        cd ../../
     - name: Plan job
       continue-on-error: true # becase nomad job plan can return 1 as exit code on allocation creation
       env:
@@ -48,8 +52,8 @@ jobs:
       run: |
         nomad job plan \
         -token ${{ secrets.ENV_NOMAD_TOKEN }} \
-        -var "ROOT_PASS=${{ secrets.ENV_VAR_ROOT_PASS }}" \ 
-        -var "main-api-version=${{ steps.get-tag.outputs.tag }}" \ 
+        -var ROOT_PASS=${{ secrets.ENV_VAR_ROOT_PASS }} \ 
+        -var main-api-version=${{ steps.get-tag.outputs.tag }} \ 
         ${{ vars.ENV_JOB_PATH }}
     - name: Run job
       env:
@@ -57,6 +61,6 @@ jobs:
       run: |
         nomad job run \
           -token ${{ secrets.ENV_NOMAD_TOKEN }} \
-          -var "ROOT_PASS=${{ secrets.ENV_VAR_ROOT_PASS }}" \ 
-          -var "main-api-version=${{ steps.get-tag.outputs.tag }}" \ 
+          -var ROOT_PASS=${{ secrets.ENV_VAR_ROOT_PASS }} \ 
+          -var main-api-version=${{ steps.get-tag.outputs.tag }} \ 
           ${{ vars.ENV_JOB_PATH }}
