--- a/BookHub.API/appsettings.json
+++ b/BookHub.API/appsettings.json
@@ -26,5 +26,30 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "projectID": "book-hub",
+          "labels": {
+            "project": "book-hub",
+            "service": "book-hub-api",
+            "type": "api"
+          }
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId", "WithOneLinerExceptions" ]
+  }
 }
