--- a/BookHub.API/appsettings.json
+++ b/BookHub.API/appsettings.json
@@ -31,7 +31,7 @@
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console" ],
     "MinimumLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Override": {
         "Microsoft": "Warning",
         "System": "Warning"
