--- a/BookHub.API/appsettings.json
+++ b/BookHub.API/appsettings.json
@@ -25,7 +25,7 @@
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
-        "Microsoft": "Warning",
+        "Microsoft": "Information",
         "System": "Warning"
       }
     },
