#119 Add scoping support

--- a/BookHub.API/appsettings.json
+++ b/BookHub.API/appsettings.json
@@ -25,8 +25,9 @@
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
-        "Microsoft": "Information",
-        "System": "Warning"
+        "Microsoft": "Warning",
+        "System": "Warning",
+        "Microsoft.EntityFrameworkCore": "Information"
       }
     },
     "WriteTo": [
@@ -38,7 +39,8 @@
             "project": "book-hub",
             "service": "book-hub-api",
             "type": "api"
-          }
+          },
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Scope:l} {Message:lj}{NewLine}{Exception}"
         }
       }
     ],
