--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: production
     steps:
+    -run: apt install jq
     - name: Extract version from git tag
       if: github.event_name == 'push'
       id: get-tag
@@ -44,7 +45,11 @@ jobs:
         NOMAD_ADDR: ${{ vars.ENV_NOMAD_ADDR }}
         SERVICE_VERSION: ${{ steps.get-tag.outputs.tag && steps.get-tag.outputs.tag || github.event.inputs.service_version }}
       run: |
-        nomad var put -token=${{ secrets.ENV_NOMAD_TOKEN }} -force -namespace="${{ vars.ENV_NOMAD_NAMESPACE }}" ${{ vars.ENV_NOMAD_VARIABLE_VERSION_META }} MAIN_API_VERSION="${{ env.SERVICE_VERSION }}"
+        jq '.Items' <<< $(nomad var get -namespace=${{ vars.ENV_NOMAD_NAMESPACE }} -out=${{ vars.ENV_NOMAD_VARIABLE_VERSION_META }}) > version.meta.json
+        cat version.meta.json
+        jq '.MAIN_API_VERSION = "${{ env.SERVICE_VERSION }}"' <<< $(cat version.meta.json) > version.meta.json
+        cat version.meta.json
+        nomad var put -token=${{ secrets.ENV_NOMAD_TOKEN }} -namespace="${{ vars.ENV_NOMAD_NAMESPACE }}" @version.meta.json
     - name: Run job
       env:
         NOMAD_ADDR: ${{ vars.ENV_NOMAD_ADDR }}
