--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,6 @@ env:
   INFRO_REPO: book-hub-umsp/bh-infrastructure
   INFRO_REPO_BRANCH: master
 
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -44,15 +43,16 @@ jobs:
     - name: Extrtact version meta
       env:
         NOMAD_ADDR: ${{ vars.ENV_NOMAD_ADDR }}
-      run: jq '.Items' <<< $(nomad var get -token=${{ secrets.ENV_NOMAD_TOKEN }} -namespace=${{ vars.ENV_NOMAD_NAMESPACE }} -out=json ${{ vars.ENV_NOMAD_VARIABLE_VERSION_META }}) > version.meta.json
+      run: nomad var get -token=${{ secrets.ENV_NOMAD_TOKEN }} -namespace=${{ vars.ENV_NOMAD_NAMESPACE }} -out=json ${{ vars.ENV_NOMAD_VARIABLE_VERSION_META }} > version.meta.json
     - run: cat version.meta.json
     - name: Set ner version value
-      run: jq '.MAIN_API_VERSION = "${{ env.SERVICE_VERSION }}"' <<< $(cat version.meta.json) > version.meta.json
+      env:
+        SERVICE_VERSION: ${{ steps.get-tag.outputs.tag && steps.get-tag.outputs.tag || github.event.inputs.service_version }}
+      run: jq '.Items.MAIN_API_VERSION = "${{ env.SERVICE_VERSION }}"' <<< $(cat version.meta.json) > version.meta.json
     - run: cat version.meta.json
     - name: Update version meta
       env:
         NOMAD_ADDR: ${{ vars.ENV_NOMAD_ADDR }}
-        SERVICE_VERSION: ${{ steps.get-tag.outputs.tag && steps.get-tag.outputs.tag || github.event.inputs.service_version }}
       run: nomad var put -token=${{ secrets.ENV_NOMAD_TOKEN }} -namespace="${{ vars.ENV_NOMAD_NAMESPACE }}" @version.meta.json
     - name: Run job
       env:
