#81 validate signature and audience for google

--- a/BookHub.API/appsettings.json
+++ b/BookHub.API/appsettings.json
@@ -2,11 +2,15 @@
   "AuthJWTConfiguration": {
     "Google": {
       "Issuer": "google_issuer",
-      "Audience": "google_audience"
+      "Audience": "google_audience",
+      "ValidateIssuer": "true",
+      "ValidateAudience": "true"
     },
     "Yandex": {
       "Issuer": "yandex_issuer",
-      "Audience": "yandex_audience"
+      "Audience": "yandex_audience",
+      "ValidateIssuer": "true",
+      "ValidateAudience": "true"
     }
   },
 
