--- a/BookHub.API/appsettings.json
+++ b/BookHub.API/appsettings.json
@@ -4,13 +4,15 @@
       "Issuer": "google_issuer",
       "Audience": "google_audience",
       "ValidateIssuer": "true",
-      "ValidateAudience": "true"
+      "ValidateAudience": "true",
+      "ValidateSignature": "false"
     },
     "Yandex": {
       "Issuer": "yandex_issuer",
       "Audience": "yandex_audience",
       "ValidateIssuer": "true",
-      "ValidateAudience": "true"
+      "ValidateAudience": "true",
+      "ValidateSignature": "false"
     }
   },
 
