--- a/BookHub.API/appsettings.json
+++ b/BookHub.API/appsettings.json
@@ -22,7 +22,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=books_hub;Username=postgres;Password=root;"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=books_hub;Username=postgres;Password=admin;"
   },
 
   "AllowedHosts": "*",
