#104 add metrics registration and implementation

--- a/BookHub.API/BookHub.API.csproj
+++ b/BookHub.API/BookHub.API.csproj
@@ -19,11 +19,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.10" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Npgsql" Version="8.0.5" />
@@ -41,6 +37,7 @@
   <ItemGroup>
     <ProjectReference Include="..\BookHub.Logic\BookHub.Logic.csproj" />
     <ProjectReference Include="..\BookHub.Storage\BookHub.Storage.csproj" />
+    <ProjectReference Include="..\Metrics\BookHub.Metrics.csproj" />
   </ItemGroup>
 
 </Project>
