--- a/BookHub.API/appsettings.json
+++ b/BookHub.API/appsettings.json
@@ -1,56 +1,65 @@
 {
-  "AuthJWTConfiguration": {
-    "Google": {
-      "Issuer": "google_issuer",
-      "Audience": "google_audience",
-      "ValidateIssuer": "true",
-      "ValidateAudience": "true",
-      "ValidateSignature": "false"
-    },
-    "Yandex": {
-      "Issuer": "yandex_issuer",
-      "Audience": "yandex_audience",
-      "ValidateIssuer": "true",
-      "ValidateAudience": "true",
-      "ValidateSignature": "false"
-    }
-  },
-
-
-  "TestConfig": {
-    "Content": "Default config content"
-  },
-
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=books_hub;Username=postgres;Password=admin;"
-  },
-
-  "AllowedHosts": "*",
-
-  "Serilog": {
-    "Using": [ "Serilog.Sinks.Console" ],
-    "MinimumLevel": {
-      "Default": "Debug",
-      "Override": {
-        "Microsoft": "Warning",
-        "System": "Warning",
-        "Microsoft.EntityFrameworkCore": "Information"
-      }
-    },
-    "WriteTo": [
-      {
-        "Name": "Console",
-        "Args": {
-          "projectID": "book-hub",
-          "labels": {
-            "project": "book-hub",
-            "service": "book-hub-api",
-            "type": "api"
-          },
-          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Scope:l} {Message:lj}{NewLine}{Exception}"
+    "AuthJWTConfiguration": {
+        "Google": {
+            "Issuer": "google_issuer",
+            "Audience": "google_audience",
+            "ValidateIssuer": "true",
+            "ValidateAudience": "true",
+            "ValidateSignature": "false"
+        },
+        "Yandex": {
+            "Issuer": "yandex_issuer",
+            "Audience": "yandex_audience",
+            "ValidateIssuer": "true",
+            "ValidateAudience": "true",
+            "ValidateSignature": "false"
         }
-      }
-    ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId", "WithOneLinerExceptions" ]
-  }
+    },
+
+
+    "TestConfig": {
+        "Content": "Default config content"
+    },
+
+    "ConnectionStrings": {
+        "DefaultConnection": "Host=localhost;Port=5432;Database=books_hub;Username=postgres;Password=admin;"
+    },
+
+    "KestrelMetricServerConfiguration": {
+        "Host": "localhost",
+        "Port": 9000
+    },
+
+    "TargetAppSourceMetricsConfiguration": {
+        "AppSource": "BookHub.API"
+    },
+
+    "AllowedHosts": "*",
+
+    "Serilog": {
+        "Using": [ "Serilog.Sinks.Console" ],
+        "MinimumLevel": {
+            "Default": "Debug",
+            "Override": {
+                "Microsoft": "Warning",
+                "System": "Warning",
+                "Microsoft.EntityFrameworkCore": "Information"
+            }
+        },
+        "WriteTo": [
+            {
+                "Name": "Console",
+                "Args": {
+                    "projectID": "book-hub",
+                    "labels": {
+                        "project": "book-hub",
+                        "service": "book-hub-api",
+                        "type": "api"
+                    },
+                    "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Scope:l} {Message:lj}{NewLine}{Exception}"
+                }
+            }
+        ],
+        "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId", "WithOneLinerExceptions" ]
+    }
 }
