--- a/BookHub.API/appsettings.json
+++ b/BookHub.API/appsettings.json
@@ -22,12 +22,12 @@
     },
 
     "ConnectionStrings": {
-        "DefaultConnection": "Host=localhost;Port=5432;Database=books_hub;Username=postgres;Password=root;"
+        "DefaultConnection": "Host=localhost;Port=5432;Database=books_hub;Username=postgres;Password=admin;"
     },
 
     "KestrelMetricServerConfiguration": {
         "Host": "localhost",
-        "Port": 9000
+        "Port": 9001
     },
 
     "TargetAppSourceMetricsConfiguration": {
